--- a/Makefile.in
+++ b/Makefile.in
@@ -63,7 +63,7 @@ PACKAGE = @PACKAGE@
 VERSION = @VERSION@
 
 SUBDIRS = src
-EXTRA_DIST = History
+EXTRA_DIST = History pdic2tsv.sh
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = config.h
@@ -252,7 +252,7 @@ distdir: $(DISTFILES)
 	@for file in $(DISTFILES); do \
 	  d=$(srcdir); \
 	  if test -d $$d/$$file; then \
-	    cp -pr $$/$$file $(distdir)/$$file; \
+	    cp -pr $$d/$$file $(distdir)/$$file; \
 	  else \
 	    test -f $(distdir)/$$file \
 	    || ln $$d/$$file $(distdir)/$$file 2> /dev/null \
