--- a/config.h.in
+++ b/config.h.in
@@ -3,6 +3,9 @@
 /* Define to empty if the keyword does not work.  */
 #undef const
 
+/* Define as __inline if that's what the C compiler calls it.  */
+#undef inline
+
 /* Define as the return type of signal handlers (int or void).  */
 #undef RETSIGTYPE
 
@@ -16,11 +19,11 @@
 #undef HOME_DIC_FILENAME
 #undef SYSTEM_DIC_PATH
 
+/* default theme number ( 0 ~ 2 ) */
+#undef DEFAULT_THEME
+
 /* Define if you have the <unistd.h> header file.  */
 #undef HAVE_UNISTD_H
-
-/* Define if you have the ncurses library (-lncurses).  */
-#undef HAVE_LIBNCURSES
 
 /* Name of package */
 #undef PACKAGE
